@startuml
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam shadowing false
left to right direction

package "Middleware" {
    class RequestLoggingMiddleware
}

package "Controllers" {
    class ArchivesController
    class FilesController
}

package "Services" {
    interface IArchiveService
    interface IFileListService

    class ArchiveService
    class FileListService

    IArchiveService <|.. ArchiveService
    IFileListService <|.. FileListService
}

package "Background" {
    class ArchiveWorker
}

package "Models" {
    enum ArchiveStatus
    class ArchiveTask
    class FileMetadata
}

package "DTOs" {
    class CreateArchiveRequest
    class CreateArchiveResponse
    class ArchiveStatusResponse
}

' Основные зависимости
ArchivesController --> IArchiveService
ArchivesController --> IFileListService
FilesController --> IFileListService

ArchiveWorker --> ArchiveService
ArchiveWorker --> IFileListService
ArchiveService --> ArchiveTask
ArchiveService --> ArchiveStatus
FileListService --> FileMetadata
Controllers --> DTOs

@enduml
